# remote-app

./: README.md  pyproject.toml
src/remote_app/: __init__.py  __main__.py  app.py
src/remote_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/remote_app/utils/: logging_utils.py
