[project]
name = "RemoteApp"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Allen Biehl",email = "biehl_evan@bah.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
