[project]
name = "remote-app"
dynamic = ["version"]
description = ""
authors = [
    {name = "Evan Allen Biehl",email = "biehl_evan@bah.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = ["version"]}
